[Mac] Fix for the tab detach position

BUG=704579

Review-Url: https://codereview.chromium.org/2802143002
Cr-Commit-Position: refs/heads/master@{#462921}

Former-commit-id: 5ec735024b7275e96970796f14bff80e1e9ae6a2