chrome/browser/ui/cocoa/browser_window_controller.h
@@ -519,9 +519,6 @@ constexpr const gfx::Size kMinCocoaPopupWindowSize(100, 122);
 // |bubbleType|.
 - (void)updateFullscreenExitBubble;
 
-// Returns YES if the browser window is in or entering any fullscreen mode.
-- (BOOL)isInAnyFullscreenMode;
-
 // Returns YES if the browser window is currently in or entering fullscreen via
 // the built-in immersive mechanism.
 - (BOOL)isInImmersiveFullscreen;
