chrome/browser/ui/cocoa/tabs/tab_window_controller.mm
@@ -378,6 +378,12 @@
   return kMenubarHeight;
 }
 
+- (BOOL)isInAnyFullscreenMode {
+  // Subclass must implement.
+  NOTIMPLEMENTED();
+  return NO;
+}
+
 - (NSView*)avatarView {
   return nil;
 }
